--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+<!-- Include Bootstrap JS via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Font Awesome Icons via CDN -->
     <link
